# stripe

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  customers.json  docker-compose.yaml  init-multiple-dbs.sql  init-test.sql  init_db.py  pyproject.toml  schema.md  schema_er.md  todo.txt
alembic/: env.py
alembic/versions/: 31ceb0647877_reset_migration.py  44b40aacd7f9_reset_migration.py  50f9e077da1c_robustesse_stripe_typages_nullable_.py  a02691750291_reset_migration.py  a80f07d720e6_reset_migration.py  cc9d469a99fb_reset_migration.py  cfd49c7f2a46_reset_migration.py  eab4a799a8ad_reset_migration.py
app/db/: session.py
app/models/: __init__.py  charge.py  customer.py  invoice.py  payment_intent.py  payment_method.py  price.py  products.py  subscription.py
app/transformers/: charge.py  customer.py  invoice.py  price.py  (+4 more)
docs/: create-db-and-migrations.md  oltp.md  populate-fetch-ingest.md  setup_gcp.md
fixtures/: stripe_batch_fixture.json
schemas/: schema_er.mmd
scripts/: check_db_integrity.py  create_fixture.py  dev_env.sh  dump_all_tables.py  fetch_payment_methods.sh  fetch_stripe_data.sh  init_db.py  populate.py  push_to_gcs.py  sync_all.py  sync_charge.py  sync_customer.py  sync_invoice.py  sync_payment_intent.py  sync_payment_method.py  sync_price.py  sync_product.py  sync_subscription.py  test_connection.py  utils.py  wait-for-postgres.sh
tests/: conftest.py  test_charge.py  test_customer.py  test_invoice.py  test_payment_intent.py  test_payment_method.py  test_price.py  test_product.py  test_subscription.py  test_sync_customer.py
(+22 files in other folders)
